fixed owl carousel responsiveness on smaller screens

--- a/assets/styles/layouts/_section.scss
+++ b/assets/styles/layouts/_section.scss
@@ -123,9 +123,11 @@
 
     .owl-prev {
       left: -100px;
+      margin-top: -200px;
     }
     .owl-next {
       right: -100px;
+      margin-top: -200px;
     }
   }
 }
